--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -46,7 +46,7 @@
                     android:layout_marginTop="8dp">
 
                     <TextView
-                        android:text="Sponsored Ads"
+                        android:text="@string/title_sponsored_ads"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:textColor="?android:textColorPrimary"
@@ -55,7 +55,9 @@
                         android:layout_height="wrap_content"/>
 
                     <TextView
-                        android:text="See All"
+                        android:id="@+id/btnAdsSeeAll"
+                        android:text="@string/btn_see_all"
+                        android:visibility="gone"
                         android:textColor="?android:colorAccent"
                         android:textStyle="bold"
                         android:layout_height="wrap_content"
@@ -84,14 +86,14 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Festival Calendar"
+                        android:text="@string/title_festival_calendar"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:textColor="?android:textColorPrimary"/>
 
                     <TextView
                         android:id="@+id/btnAll"
-                        android:text="See All"
+                        android:text="@string/btn_see_all"
                         android:textStyle="bold"
                         android:textColor="?android:colorAccent"
                         android:layout_height="wrap_content"
