--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/logoImg"
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:contentDescription="App Logo"
+        android:contentDescription="@string/desc_app_logo"
         android:src="@drawable/logo"
         app:layout_constraintBottom_toTopOf="@id/tagline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:layout_marginTop="426dp"
         android:layout_marginEnd="116dp"
         android:layout_marginBottom="286dp"
-        android:text="Grow Your Business Digitally"
+        android:text="@string/splash_tagline"
         android:textColor="?android:textColorSecondary"
         android:textSize="14sp"
         android:fontFamily="cursive"
