--- a/app/src/main/res/layout/activity_approve_reject.xml
+++ b/app/src/main/res/layout/activity_approve_reject.xml
@@ -81,7 +81,7 @@
         <!-- ================= PAYMENT PROOF ================= -->
 
         <TextView
-            android:text="Payment Proof"
+            android:text="@string/label_payment_proof"
             android:textStyle="bold"
             android:layout_marginBottom="6dp"
             android:layout_width="wrap_content"
@@ -102,7 +102,7 @@
             android:id="@+id/downloadBtn"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:text="Download Proof"
+            android:text="@string/btn_download_proof"
             android:textAllCaps="false"
             android:background="@drawable/bg_primary_button"
             android:textColor="@android:color/white"
@@ -123,7 +123,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Grant Plan (Determines Expiry)"
+                android:text="@string/label_grant_plan"
                 android:textStyle="bold"
                 android:layout_marginBottom="8dp"/>
 
@@ -150,7 +150,7 @@
                 android:id="@+id/txtCurrentExpiry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Expires On: --"
+                android:text="@string/label_expires_on"
                 android:textStyle="bold"
                 android:visibility="gone"/>
 
@@ -159,7 +159,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:backgroundTint="#F44336"
-                android:text="Update Expiry"
+                android:text="@string/btn_update_expiry"
                 android:textAllCaps="false"
                 android:layout_marginTop="8dp"
                 android:visibility="gone"
@@ -179,7 +179,7 @@
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
-                android:text="Approve"
+                android:text="@string/btn_approve"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
                 android:background="@drawable/bg_primary_button"/>
@@ -193,7 +193,7 @@
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
-                android:text="Reject"
+                android:text="@string/btn_reject"
                 android:textAllCaps="false"
                 android:textColor="#FF6B6B"
                 android:textStyle="bold"
