--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -37,7 +37,7 @@
 
                     <TextView
                         android:id="@+id/txtNew"
-                        android:text="New"
+                        android:text="@string/tab_new"
                         android:textSize="18sp"
                         android:textStyle="bold"
                         android:layout_width="wrap_content"
@@ -63,7 +63,7 @@
 
                     <TextView
                         android:id="@+id/txtRead"
-                        android:text="Read"
+                        android:text="@string/tab_read"
                         android:textSize="18sp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
