--- a/app/src/main/res/layout/layout_section_header.xml
+++ b/app/src/main/res/layout/layout_section_header.xml
@@ -25,7 +25,7 @@
         android:id="@+id/txtViewAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="View All"
+        android:text="@string/btn_see_all"
         android:textSize="13sp"
         android:textStyle="bold"
         android:textColor="?attr/colorPrimary"
