--- a/app/src/main/res/menu/bottom_menu_user.xml
+++ b/app/src/main/res/menu/bottom_menu_user.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/home"
-        android:title="Home"
+        android:title="@string/nav_home"
         android:icon="@drawable/ic_home"/>
 
 <!--    <item-->
@@ -13,17 +13,17 @@
 
     <item
         android:id="@+id/template"
-        android:title="Template"
+        android:title="@string/nav_template"
         android:icon="@drawable/ic_template"/>
 
     <item
         android:id="@+id/contact"
-        android:title="Contact"
+        android:title="@string/nav_contact"
         android:icon="@drawable/ic_call"/>
 
     <item
         android:id="@+id/myDesign"
-        android:title="MyDesign"
+        android:title="@string/nav_my_design"
         android:icon="@drawable/ic_my_designs"/>
 
 </menu>
